# oidc-python

./: .gitignore  .prettierrc  .pylintrc  README.md  environment.yml
ign_keycloak/: example.py  pyproject.toml  setup.py
keycloak_auth_plugin/: Makefile  README.html  README.txt  __init__.py  keycloak_auth_plugin.py  keycloak_auth_plugin_dialog.py  keycloak_auth_plugin_dialog_base.ui  metadata.txt  pb_tool.cfg  resources.py  resources.qrc
keycloak_auth_plugin/help/source/: conf.py  index.rst
keycloak_auth_plugin/lib/ign_keycloak/: KeycloakAuthListener.py  KeycloakService.py
