[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "ign_keycloak"
dynamic = ["version"]

[tool.setuptools.packages.find]
include = [
    "ign_keycloak",
    "ign_keycloak.*",
]

[tool.black]
line-length = 140
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''